# lightning-memory

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SKILL.md  demo.html  docker-compose.yml  fix_3.py  fix_5.py  pyproject.toml  server.json  smithery.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
docs/superpowers/plans/: 2026-03-13-phase1-community-reputation.md  2026-03-13-phase2-compliance-integration.md  2026-03-13-phase3-memory-marketplace.md
docs/superpowers/specs/: 2026-03-13-reputation-compliance-marketplace-design.md
examples/: langchain_integration.py
lightning_memory/: __init__.py  budget.py  cli.py  client.py  compliance.py  config.py  db.py  embedding.py  gateway.py  intelligence.py  l402.py  lightning.py  macaroon.py  memory.py  nostr.py  phoenixd.py  preflight.py  relay.py  server.py  sync.py  trust.py
openclaw-skill/: SKILL.md
src/: __init__.py  db.py  l402.py  memory.py
tests/: conftest.py  test_budget.py  test_client.py  test_compliance.py  test_config.py  test_db.py  test_dedup.py  test_embedding.py  test_gateway.py  test_intelligence.py  test_l402.py  test_macaroon.py  test_memory.py  test_memory_quality.py  test_nostr.py  test_preflight.py  test_relay.py  test_relay_status.py  test_server.py  test_signing.py  test_sync.py  test_sync_integration.py  test_trust.py  test_vendor_normalization.py
